# OpenPalantir

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/analysis_engine/: analyzer.py  report_generator.py
backend/api/: task.py
backend/cdc/: __init__.py  cdc_consumer.py  cdc_manager.py  event_processor.py  schema_cache.py
backend/config/: backup.py  celery_config.py  database.py  neo4j_config.py
backend/database_management/: database_manager.py  database_service.py  prompt_schema_annotate.md  schema_annotator.py
backend/decision_engine/: __init__.py  context_builder.py  contracts.py  conversation_manager.py  decision_kernel.py  evidence_fusion.py  llm_reasoner.py  plugin_registry.py  query_analyzer.py  retrieval_orchestrator.py
backend/document_processing/: document_processor.py
backend/entity_extraction/: llm_entity_enhancer.py  prompt_combined_template.md  prompt_template.md
backend/file_sources/: __init__.py  base.py  local_source.py
backend/knowledge_graph/: graph_manager.py  graph_partition.py  graph_performance.py
backend/model_management/: __init__.py  model_client.py  model_service.py
backend/models/: cdc.py  database.py  model.py  resource_identifier.py  source.py  task.py
backend/pageindex/: __init__.py  config.yaml  model_adapter.py  page_index.py  page_index_md.py  page_index_txt.py  prompt_doc_description.md  utils.py  (+1 more)
(+76 files in other folders)
